src/styles/pages/home.scss
.searchbar-container {
  margin:auto;
  position: fixed;
  top: 25%;
  left: 50%;
  transform: translate(-50%, 0);
  h1 {
    font-size: 60px; 
    text-align: center;
    margin-top: 0;
    margin-bottom: 10px;
  }
  svg {
    width: 150px; 
    margin: auto;
    display: block;
  }
}
.app-footer {
  @media screen and (max-height: 700px) {
    display: none;
  }
  text-align: center;
  position: fixed;
  bottom: 0;
  width: 100%;
  p {
      font-size: .9em;
      display: block;
      margin: 1em auto;
      a {
          font-family: "Montserrat-Bold";
          font-weight: 800;
      }
  }
}

